# utrace

./: Justfile  README.md  pyproject.toml
src/utrace/: __init__.py  hc.py  opensearch.py  otel.py
tests/: test_otel.py  test_tracer.py
