[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "utrace"
authors = [{name = "Tin Tvrtkovic", email = "tinchester@gmail.com"}]
classifiers = ["License :: OSI Approved :: MIT License"]
version = "24.1.0.dev0"
dynamic = ["description"]
dependencies = [
    "attrs",
    "aiohttp",
    "orjson",
    "rich",
]
requires-python = ">= 3.12"

[project.optional-dependencies]
lint = [
    "ruff",
    "mypy",
]
test = ["pytest"]

[project.urls]
Home = "https://github.com/Tinche/utrace"
