[build-system]
requires = ["hatchling>=1.12.2"]
build-backend = "hatchling.build"

[project]
name = "utrace"
authors = [{name = "Tin Tvrtkovic", email = "tinchester@gmail.com"}]
classifiers = ["License :: OSI Approved :: MIT License"]
version = "24.1.0.dev0"
dynamic = ["description"]
dependencies = [
    "attrs",
    "aiohttp",
    "orjson",
    "rich",
]
requires-python = ">= 3.12"

[project.optional-dependencies]
lint = [
    "ruff",
    "mypy",
]
test = ["pytest", "pytest-asyncio"]

[project.urls]
Home = "https://github.com/Tinche/utrace"

[tool.pytest.ini_options]
asyncio_mode = "auto"
